--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,316 @@
-/* место для вашего кода */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 92px 24px 93px 24px;
+}
+
+.header__menu {
+  margin-left: 27px;
+}
+
+.header__links-list {
+  display: flex;
+}
+
+.header__links-list-item {
+  font-weight: 400;
+  font-size: 18px;
+  margin-left: 13px;
+  margin-right: 18px;
+  margin-top: 4px;
+  letter-spacing: 0.01em;
+  color: #000;
+  list-style-type: circle;
+}
+
+.header__links-list-item_no-bullit {
+  margin-left: 0px;
+  list-style-type: none;
+}
+
+.header__logo {
+  width: 137px;
+  height: 105px;
+  margin-left: -167px;
+}
+
+.address {
+  font-weight: 400;
+  font-size: 18px;
+  padding-right: 61px;
+  margin-top: 4px;
+  line-height: 135%;
+  color: #000;
+  font-style: normal;
+}
+
+.cover {
+  position: relative;
+  width: 100%;
+  height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.6;
+}
+
+.cover__title {
+  position: absolute;
+  z-index: 1;
+  top: 165px;
+  left: 50px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 115%;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  display: block;
+  position: absolute;
+  top: 127px;
+  left: 286px;
+  line-height: 115%;
+}
+
+.aligned-text_right {
+  display: block;
+  position: absolute;
+  top: 247px;
+  left: 584px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.cover__description {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 127%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.cover__description-text {
+  display: block;
+  position: absolute;
+  top: 668px;
+  left: 78px;
+  word-spacing: 18.7px;
+}
+
+.bet-button {
+  position: absolute;
+  top: 655px;
+  left: 794px;
+  width: 256px;
+  height: 51px;
+  border: 1px solid #fff;
+  background: transparent;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  transition: background 0.5s;
+}
+
+.bet-button:active {
+  background: #fff;
+  transition: 0s;
+}
+
+.lots {
+  height: 692px;
+  margin: 182px 24px 146px 24px;
+}
+
+.lots__heading {
+  margin-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 27px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  position: relative;
+  width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.card__title {
+  display: block;
+  z-index: 1;
+  width: 254px;
+  margin-top: 51px;
+  margin-left: 40px;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #fff;
+}
+
+.card__text {
+  display: block;
+  z-index: 1;
+  width: 254px;
+  margin-bottom: 48px;
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  color: #fff;
+}
+
+.lots__look-more-link {
+  display: block;
+  margin-top: 30px;
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+}
+
+.about {
+  height: 595px;
+  margin: 146px 24px 180px 24px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 358px 2fr;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  margin-left: 47px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  margin-top: 136px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.about__text {
+  margin-top: 101px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  color: #000;
+}
+
+.about__text_low_margin_top {
+  margin-top: 24px;
+  letter-spacing: 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  height: 98px;
+  margin: 180px 50px 88px 50px;
+}
+
+.footer__address_margin {
+  margin-top: 1px;
+  margin-left: 1px;
+}
+
+.footer__menu {
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  color: #000;
+}
+
+.footer__menu-list {
+  list-style-type: none;
+}
+
+.footer__menu-list-item {
+  margin-right: 23px;
+}
+
+.footer__social-list {
+  display: flex;
+  column-gap: 48px;
+  list-style-type: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
